# xlwings-excel-api

./: .gitignore  README.md  Shan_Xlwings_Addin.xlam  main.py  main.xlsm  pq_manager.py  pyproject.toml
api/: __init__.py
api/common/: __init__.py  args.py  datetime.py  faker.py  fuzzy.py  re.py  slugify.py
api/data/: __init__.py  cache_helpers.py  df.py  df_cached.py  np.py
api/plots/: __init__.py  df_plots.py
api/web/: __init__.py  scrape.py
helpers/: pd.py  plot.py  web.py
pq_manager/: __init__.py  favorites.csv  helpers.py  index.csv  index.json  main.py  theme.json  ui.py
pq_manager/functions/json/: fx_JSONLoadAndExpand.pq
pq_manager/functions/table/: fx_GetTableSlice.pq  fx_TableKeepColumns.pq  fx_TableRemoveDuplicateRows.pq  fx_TableRemoveNullCols.pq  fx_TableRenameCols.pq  fx_TableSlice.pq  fx_TableUnpivotAuto.pq
pq_manager/functions/table_loaders/: fx_LoadCSVDynamic.pq  fx_LoadExcelDynamic.pq  fx_LoadJSONDynamic.pq
pq_manager/functions/table_processing/: fx_TableArrangeSeq.pq  fx_TableRemoveDuplicateRows.pq  fx_TableRemoveNullCols.pq  fx_TableRenameCols.pq  fx_TableUnpivotAuto.pq
pq_manager/functions/text/: fx_TextSluggify.pq
pq_manager/functions/utility/: fx_TryOtherwise.pq
pq_repo/functions/table_loaders/: fx_LoadCSVDynamic.pq  fx_LoadJSONDynamic.pq  fx_LoadPDFDynamic.pq
pq_repo/functions/table_processing/: fx_TableAddColsDynamic.pq  fx_TableArrangeByKeywordOrder.pq  fx_TableKeepColumns.pq  fx_TableRemoveNullCols.pq  fx_TableSlice.pq  fx_TableUnpivotAuto.pq
pq_repo/functions/text/: fx_TextClean.pq
(+1 files in other folders)
