[project]
name = "shan-xlwings-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastcluster>=1.3.0",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "xlwings>=0.33.15",
]
