[project]
name = "shan-xlwings-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awesome-slugify>=1.6.5",
    "beautifulsoup4>=4.13.5",
    "customtkinter>=5.2.2",
    "faker>=37.6.0",
    "fastcluster>=1.3.0",
    "lxml>=6.0.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pyperclip>=1.11.0",
    "pyyaml>=6.0.2",
    "rapidfuzz>=3.14.0",
    "requests>=2.32.5",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "selenium>=4.35.0",
    "xlwings>=0.33.15",
]
